--- a/css/navbar.css
+++ b/css/navbar.css
@@ -23,7 +23,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1200px;
+  max-width: 95%;
   padding: 0 2rem;
   margin: 0 auto;
 }
